--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LocationKotlinMVVM</string>
+    <string name="get_distance">Get Distance</string>
+    <string name="get_your_location">Get Your Location</string>
+    <string name="the_distance_will_show_up_here">The distance will show up here.</string>
 </resources>
